# unsupervised-fine-tuning-pose3d-for-sports

./: .gitignore  LICENSE  README.md  preprocess.py  preprocess_asp.py  pyproject.toml  run.py  run_asp.py
asp/: databuild.py  dataset.py  evaluation.py  infernece.py  loss.py  training.py  utils.py
common/: ba.py  calibration.py  utils.py
common/MotionAGFormer/: model.py
common/mmpose/mmdet_cfg/: rtmdet_m_640-8xb32_coco-person.py
common/mmpose/mmpose_cfg/: base.py  td-hm_ViTPose-huge_8xb64-210e_coco-256x192.py
config/asp/: MotionAGFormer-pre.yaml  defaults.py
config/runner/: MotionAGFormer-xs.yaml  defaults.py
libs/: utils.py
runner/: databuild.py  dataset.py  evaluation.py  inference.py  loss.py  training.py  utils.py
